# Wang

./: 20200112-Project_kickoff.pptx  Kazuki__Hanyu.pptx  README.md  presentations_20200112-Project_kickoff.pptx
matlab/: FK_UR10.m  createEvalPTPTraj.m  dynamics_UR10.m  rel_T_cmi_UR10.m  rel_T_i_UR10.m  symModel_UR10.m  symModel_UR10.m~
matlab/01-mat_files/: coriolis_centripetal_matrix_C.mat  gravitational_vector_G.mat  inertia_matrix_M_unsimplified.mat
presentations/: 20200112-Project_kickoff.pptx  20200112-Project_kickoff_Dominik.pptx  20200112-Project_kickoff_v2.pptx  20200112-Project_kickoff_v3.0.1.pptx  20200112-Project_kickoff_v3.pptx
robot data/matlab/: Dynamic_matrices.txt  Forward_Diff_Kinematics_UR10.m  J_0_UR10_3.m  createEvalPTPTraj.m  diff_FK_UR10.m  dynamics_UR10.m  dynamics_UR10_added.m  rel_T_cmi_UR10.m  rel_T_i_UR10.m  robRegMatricesPreCalc_ur10.txt  robot_regressor_matrices.txt  symModel_UR10.m  symModel_UR10.m~
robot data/matlab/01-mat_files/: inertia_matrix_M.mat
skin_data/How2s/: How2RunUR10-Control-Test.txt  How2UseSkinDriverWithExtrinsics.txt
tum_ics_skin_tutorials/: CMakeLists.txt  package.xml
tum_ics_skin_tutorials/launch/: full_config.launch  load_and_view_patch.launch  load_and_view_patch_two_cells_ur10_ee_link.launch  load_and_view_patches.launch  rviz.launch
tum_ics_skin_tutorials/launch/configs/: test_skin_config.xml
tum_ics_skin_tutorials/src/Applications/: main_load_and_view_patch_tut.cpp
tum_ics_skin_tutorials/tum_ics_skin_tutorials/launch/: load_and_view_patch_robot.launch
tum_ics_skin_tutorials/tum_ics_skin_tutorials/launch/configs/: base_frame_list.yaml  patchTwoCellsUR10-ee_link.xml  skin_driver_ns_list.yaml
tum_ics_skin_tutorials/tum_ics_skin_tutorials/src/Applications/: main_load_and_view_patch_robot_tut.cpp
tum_ics_ur10_controller_tutorial/launch/configs/: configUR10_FD.ini
tum_ics_ur10_controller_tutorial/launch/launch/: lacqueyGripperServerUR10.launch
tum_ics_ur10_controller_tutorial/launch/launch/configs/: simpleEffortCtrl.yaml
ur10_controller/: CMakeLists.txt  package.xml
ur10_controller/launch/configs/robot/: ur10_params.yaml
